--- a/app/index.html
+++ b/app/index.html
@@ -40,11 +40,13 @@
               <img class="header__logo_light" src="img/header/logo-light.svg" alt="Логотип">
             </a>
           </div>
-          <button class="nav-mobile-btn">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
+          <div class="mobile-btn-wrapper">
+            <button class="nav-mobile-btn">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
+          </div>
           <nav class="header__nav nav">
             <ul class="nav__list">
               <li class="nav__item"><a class="nav__link" href="#portfolio">Портфолио</a></li>
@@ -53,12 +55,6 @@
               <li class="nav__item"><a class="nav__link" href="#">Сделать заказ</a></li>
               <li class="nav__item"><a class="nav__link phone" href="tel:+79006566903">+7 900 656 69 03</a></li>
             </ul>
-          </nav>
-          <nav class="header__links">
-            <a class="link-phone" href="tel:+79006566903">+7 900 656 69 03</a>
-            <a href="#footer" class="request-btn">
-              Заявка
-            </a>
           </nav>
           <button class="switch-theme-btn">
             
@@ -93,15 +89,21 @@
           </div>
         </div>
       </div>
+      <nav class="header__links">
+        <a class="link-phone" href="tel:+79006566903">+7 900 656 69 03</a>
+        <a href="#footer" class="request-btn">
+          Заявка
+        </a>
+      </nav>
     </header>
-    <div class="services-new" id="portfolio">
+    <!-- <div class="services-new" id="portfolio">
       <img class="services-new__img" src="img/services-new/bg.svg" alt="">
       <div class="services-new__inner">
         <div class="services-new__item"><span>Сайты</span><span>Сайты</span></div>
         <div class="services-new__item"><span>Реклама</span><span>Реклама</span></div>
         <div class="services-new__item"><span>Контент</span><span>Контент</span></div>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="services media">
       <div class="container">
         <a href="#marketing" class="to-bottom_left">
