--- a/app/index.html
+++ b/app/index.html
@@ -1786,7 +1786,8 @@
             <div class="reviews__column">
               <div class="reviews__item btn-video" data-path="review-popup-1">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3966-3237-4466-b661-613837396431/giphy.gif" alt="" class="reviews__img">
+                  <img class="youtube-icon" src="img/reviews/youtube-icon.png" alt="">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -1794,7 +1795,7 @@
               </div>
               <div class="reviews__item btn-video" data-path="review-popup-2">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3539-6165-4237-a661-323066613663/giphy.gif" alt="" class="reviews__img">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -1804,7 +1805,7 @@
             <div class="reviews__column">
               <div class="reviews__item">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3338-3033-4435-b562-383034366531/giphy_2.gif" alt="" class="reviews__img">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -1812,7 +1813,7 @@
               </div>
               <div class="reviews__item">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3035-3338-4561-b333-346265336165/giphy.gif" alt="" class="reviews__img">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -1822,7 +1823,7 @@
             <div class="reviews__column">
               <div class="reviews__item">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3332-6135-4330-b030-316663336630/giphy_3.gif" alt="" class="reviews__img">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -1830,7 +1831,7 @@
               </div>
               <div class="reviews__item">
                 <div class="reviews__item-img">
-                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                  <img src="https://static.tildacdn.com/tild3865-6230-4239-b264-393031346366/giphy.gif" alt="" class="reviews__img">
                 </div>
                 <p class="reviews__item-title">
                   Компания "АкваИнжиниринг"
@@ -2003,7 +2004,7 @@
       </div>
       <div class="modal-overlay-video">
         <div class="modal__video" data-target="review-popup-2">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/tsNu2IFyZgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video-modal" width="560" height="315" src="https://www.youtube.com/embed/tsNu2IFyZgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
