--- a/app/index.html
+++ b/app/index.html
@@ -1889,57 +1889,141 @@
         </div>
       </div>
     </div>
-    <div class="clients">
+    <div class="clients media">
       <div class="container">
         <h2 class="clients__title">
           Наши клиенты
         </h2>
         <div class="clients__inner">
           <div class="clients__item">
-            <img src="img/clients/1.svg" alt="" class="clients__logo">
+            <img src="img/clients/1.svg" alt="" class="clients__logo pilki">
+            <img src="img/clients/1.svg" alt="" class="clients__logo_hover pilki">
           </div>
           <div class="clients__item">
-            <img src="img/clients/2.svg" alt="" class="clients__logo">
+            <img src="img/clients/2.svg" alt="" class="clients__logo bassein">
+            <img src="img/clients/2.svg" alt="" class="clients__logo_hover bassein">
           </div>
           <div class="clients__item">
-            <img src="img/clients/3.svg" alt="" class="clients__logo">
+            <img src="img/clients/3.svg" alt="" class="clients__logo tbs">
+            <img src="img/clients/3.svg" alt="" class="clients__logo_hover tbs">
           </div>
           <div class="clients__item">
-            <img src="img/clients/4.svg" alt="" class="clients__logo">
+            <img src="img/clients/4.svg" alt="" class="clients__logo logo-pool">
+            <img src="img/clients/4.svg" alt="" class="clients__logo_hover logo-pool">
           </div>
           <div class="clients__item">
-            <img src="img/clients/5.svg" alt="" class="clients__logo">
+            <img src="img/clients/5.svg" alt="" class="clients__logo metizoff">
+            <img src="img/clients/5-hover.svg" alt="" class="clients__logo_hover metizoff">
           </div>
           <div class="clients__item">
-            <img src="img/clients/6.svg" alt="" class="clients__logo">
+            <img src="img/clients/6.svg" alt="" class="clients__logo flexalen">
+            <img src="img/clients/6-hover.svg" alt="" class="clients__logo_hover flexalen">
           </div>
           <div class="clients__item">
-            <img src="img/clients/7.svg" alt="" class="clients__logo">
+            <img src="img/clients/7.svg" alt="" class="clients__logo bazadance">
+            <img src="img/clients/7-hover.svg" alt="" class="clients__logo_hover bazadance">
           </div>
           <div class="clients__item">
-            <img src="img/clients/8.svg" alt="" class="clients__logo">
+            <img src="img/clients/8.svg" alt="" class="clients__logo more">
+            <img src="img/clients/8.svg" alt="" class="clients__logo_hover more">
           </div>
           <div class="clients__item">
-            <img src="img/clients/9.svg" alt="" class="clients__logo">
+            <img src="img/clients/9.svg" alt="" class="clients__logo odevai">
+            <img src="img/clients/9.svg" alt="" class="clients__logo_hover odevai">
           </div>
           <div class="clients__item">
-            <img src="img/clients/10.svg" alt="" class="clients__logo">
+            <img src="img/clients/10.svg" alt="" class="clients__logo mpt">
+            <img src="img/clients/10.svg" alt="" class="clients__logo_hover mpt">
           </div>
           <div class="clients__item">
-            <img src="img/clients/11.svg" alt="" class="clients__logo">
+            <img src="img/clients/11.svg" alt="" class="clients__logo metrology">
+            <img src="img/clients/11-hover.svg" alt="" class="clients__logo_hover metrology">
           </div>
           <div class="clients__item">
-            <img src="img/clients/12.svg" alt="" class="clients__logo">
+            <img src="img/clients/12.svg" alt="" class="clients__logo ecoroll">
+            <img src="img/clients/12-hover.svg" alt="" class="clients__logo_hover ecoroll">
           </div>
           <div class="clients__item">
-            <img src="img/clients/13.svg" alt="" class="clients__logo">
+            <img src="img/clients/13.svg" alt="" class="clients__logo moi-dom">
+            <img src="img/clients/13.svg" alt="" class="clients__logo_hover moi-dom">
           </div>
           <div class="clients__item">
-            <img src="img/clients/14.svg" alt="" class="clients__logo">
+            <img src="img/clients/14.svg" alt="" class="clients__logo formula">
+            <img src="img/clients/14-hover.svg" alt="" class="clients__logo_hover formula">
           </div>
           <div class="clients__item">
             <img src="img/clients/15.svg" alt="" class="clients__logo sleep-system">
             <img src="img/clients/15-hover.svg" alt="" class="clients__logo_hover sleep-system">
+          </div>
+        </div>
+        <div class="clients__inner_mobile clients-slider">
+          <div class="clients-slide">
+            <div class="clients__item">
+              <img src="img/clients/1.svg" alt="" class="clients__logo pilki">
+              <img src="img/clients/1.svg" alt="" class="clients__logo_hover pilki">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/2.svg" alt="" class="clients__logo bassein">
+              <img src="img/clients/2.svg" alt="" class="clients__logo_hover bassein">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/3.svg" alt="" class="clients__logo tbs">
+              <img src="img/clients/3.svg" alt="" class="clients__logo_hover tbs">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/4.svg" alt="" class="clients__logo logo-pool">
+              <img src="img/clients/4.svg" alt="" class="clients__logo_hover logo-pool">
+            </div>
+          </div>
+          <div class="clients-slide">
+            <div class="clients__item">
+              <img src="img/clients/5.svg" alt="" class="clients__logo metizoff">
+              <img src="img/clients/5-hover.svg" alt="" class="clients__logo_hover metizoff">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/6.svg" alt="" class="clients__logo flexalen">
+              <img src="img/clients/6-hover.svg" alt="" class="clients__logo_hover flexalen">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/7.svg" alt="" class="clients__logo bazadance">
+              <img src="img/clients/7-hover.svg" alt="" class="clients__logo_hover bazadance">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/8.svg" alt="" class="clients__logo more">
+              <img src="img/clients/8.svg" alt="" class="clients__logo_hover more">
+            </div>
+          </div>
+          <div class="clients-slide">
+            <div class="clients__item">
+              <img src="img/clients/9.svg" alt="" class="clients__logo odevai">
+              <img src="img/clients/9.svg" alt="" class="clients__logo_hover odevai">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/10.svg" alt="" class="clients__logo mpt">
+              <img src="img/clients/10.svg" alt="" class="clients__logo_hover mpt">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/11.svg" alt="" class="clients__logo metrology">
+              <img src="img/clients/11-hover.svg" alt="" class="clients__logo_hover metrology">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/12.svg" alt="" class="clients__logo ecoroll">
+              <img src="img/clients/12-hover.svg" alt="" class="clients__logo_hover ecoroll">
+            </div>
+          </div>
+          <div class="clients-slide">
+            <div class="clients__item">
+              <img src="img/clients/13.svg" alt="" class="clients__logo moi-dom">
+              <img src="img/clients/13.svg" alt="" class="clients__logo_hover moi-dom">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/14.svg" alt="" class="clients__logo formula">
+              <img src="img/clients/14-hover.svg" alt="" class="clients__logo_hover formula">
+            </div>
+            <div class="clients__item">
+              <img src="img/clients/15.svg" alt="" class="clients__logo sleep-system">
+              <img src="img/clients/15-hover.svg" alt="" class="clients__logo_hover sleep-system">
+            </div>
           </div>
         </div>
       </div>
@@ -1959,109 +2043,68 @@
         </div>
       </div>
     </div>
-    <!-- <div class="prices">
+    <div class="prices">
       <div class="container">
-        <h2 class="prices__title">Цены</h2>
+        <h2 class="prices__title">Тарифы и пакеты</h2>
         <div class="prices__inner">
-          <div class="prices__row">
+          <ul class="prices__list">
             <div class="prices__item">
-              <p class="prices__item-title">
-                Лайт
-              </p>
-              <ul class="prices__list">
-                <li class="prices__list-item">
-                  До 100 запросов
-                </li>
-                <li class="prices__list-item">
-                  Запуск за 2 дня
-                </li>
-                <li class="prices__list-item">
-                  Отчетность 1/14
-                </li>
-                <li class="prices__list-item">
-                  Ведение 30 дней
-                </li>
-              </ul>
-              <div class="prices__price">
-                <span>&#8381;</span><span class="price">15 000</span>
-              </div>
-              <button class="prices__btn">Приобрести</button>
+              <span class="prices__item-name">
+                
+              </span>
+              <span class="lite rate">
+                <span class="rate__name">лайт</span>
+                <span class="rate__price">20 000</span>
+                <span class="rate__info">До 3 правок</span>
+              </span>
+              <span class="standart rate">
+                <span class="rate__name">лайт</span>
+                <span class="rate__price">20 000</span>
+                <span class="rate__info">До 3 правок</span>
+              </span>
+              <span class="premium rate">
+                <span class="rate__name">лайт</span>
+                <span class="rate__price">20 000</span>
+                <span class="rate__info">До 3 правок</span>
+              </span>
+              <span class="express rate">
+                <span class="rate__name">лайт</span>
+                <span class="rate__price">20 000</span>
+                <span class="rate__info">До 3 правок</span>
+              </span>
             </div>
-            <div class="prices__item">
-              <p class="prices__item-title">
-                Универсальное решение
-              </p>
-              <ul class="prices__list">
-                <li class="prices__list-item">
-                  500 + запросов
-                </li>
-                <li class="prices__list-item">
-                  Запуск за 10 дней
-                </li>
-                <li class="prices__list-item">
-                  Отчетность 1/7
-                </li>
-                <li class="prices__list-item">
-                  Ведение 30 дней
-                </li>
-              </ul>
-              <div class="prices__price">
-                <span>&#8381;</span><span class="price">30 000</span>
-              </div>
-              <button class="prices__btn">Приобрести</button>
-            </div>
-          </div>
-          <div class="prices__row">
-            <div class="prices__item">
-              <p class="prices__item-title">
-                Премиум
-              </p>
-              <ul class="prices__list">
-                <li class="prices__list-item">
-                  1000 + запросов
-                </li>
-                <li class="prices__list-item">
-                  Запуск за 10 дней
-                </li>
-                <li class="prices__list-item">
-                  Отчетность 1/7
-                </li>
-                <li class="prices__list-item">
-                  А/Б тестирование
-                </li>
-                <li class="prices__list-item">
-                  Ведение 30 дней
-                </li>
-              </ul>
-              <div class="prices__price">
-                <span>&#8381;</span><span class="price">45 000</span>
-              </div>
-              <button class="prices__btn">Приобрести</button>
-            </div>
-            <div class="prices__item">
-              <p class="prices__item-title">
-                Экспресс
-              </p>
-              <ul class="prices__list">
-                <li class="prices__list-item">
-                  До 100 запросов
-                </li>
-                <li class="prices__list-item">
-                  Запуск за 2 дня
-                </li>
-                <li class="prices__list-item">
-                  Без возможности правок
-                </li>
-              </ul>
-              <div class="prices__price">
-                <span>&#8381;</span><span class="price">10 000</span>
-              </div>
-              <button class="prices__btn">Приобрести</button>
-            </div>
-          </div>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Создание рекламных материалов и объявлений для Яндекс
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Создание рекламных материалов и объявлений для Яндекс
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            
+          </ul>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="modals">
       <div class="modal-overlay-sertificat">
         <div class="modal modal__sertificat" data-target="sertificat-popup">
