--- a/app/index.html
+++ b/app/index.html
@@ -2058,19 +2058,19 @@
                 <span class="rate__info">До 3 правок</span>
               </span>
               <span class="standart rate">
-                <span class="rate__name">лайт</span>
-                <span class="rate__price">20 000</span>
-                <span class="rate__info">До 3 правок</span>
+                <span class="rate__name">стандарт</span>
+                <span class="rate__price">35 000</span>
+                <span class="rate__info">До 5 правок</span>
               </span>
               <span class="premium rate">
-                <span class="rate__name">лайт</span>
-                <span class="rate__price">20 000</span>
-                <span class="rate__info">До 3 правок</span>
+                <span class="rate__name">премиум</span>
+                <span class="rate__price">50 000</span>
+                <a href="#" class="rate__info-link">Почему это выгодно</a>
               </span>
               <span class="express rate">
-                <span class="rate__name">лайт</span>
-                <span class="rate__price">20 000</span>
-                <span class="rate__info">До 3 правок</span>
+                <span class="rate__name">экспресс</span>
+                <span class="rate__price">10 000</span>
+                <span class="rate__info">Без возможности правок</span>
               </span>
             </div>
             <li class="prices__item">
@@ -2100,7 +2100,213 @@
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
             </li>
-            
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Анализ Вашего сайта и бизнеса
+              </span>
+              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+            </li>
           </ul>
         </div>
       </div>
